--- a/settings.yaml
+++ b/settings.yaml
@@ -7,10 +7,11 @@ versions:
     venv: /path/to/af/version/1/alphafold-env
     data_dir: /path/to/af/data_dir
     default: true
-  version_2_name:
+  my_very_long_version_2_name:
     path: /path/to/af/version/2/main-folder
     venv: /path/to/af/version/2/alphafold-env
     data_dir: /path/to/af/data_dir
+    docker_image_name: alphafold-custum01
 alphaplots:
-  path: ./path/to/alphaplots.py
+  path: /path/to/alphaplots.py
   venv: /path/to/alphaplots-env
